--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,10 @@ body{font-size:12px;font-family:"微软雅黑";}
 /*end layout*/
 @media only screen and (min-width:1024px){
 	#header,#M_ad,.content,#footer{width:960px;margin:auto;}
-	#header,.#M_ad,#footer{margin-bottom:10px;}
+	#header,#M_ad,#footer{margin-bottom:10px;}
 }
-@media only screen and (min-width:400px) and (max-width:1024px){#header,#M_ad,.content,#footer{width:98%;}}
+@media only screen and (min-width:400px) and (max-width:1024px){
+	#header,#M_ad,.content,#footer{width:98%;}}
 @media only screen and (max-width:400px){
 	#header,#M_ad,.content,#footer{width:98%;}
 }
