--- a/css/style.css
+++ b/css/style.css
@@ -1074,6 +1074,7 @@ section{
 .nav-tabs{
 	border:1px solid #333;
 	height:450px;
+	position:relative;
 }
 .tab-content .col-sm-4 img,.tab-content .col-sm-4 p{
 	width:100%;
@@ -1085,6 +1086,8 @@ section{
 	color:#999;
 }
 .tab-content .col-sm-4{
+	position:relative;
+	float:left;
 	margin-top:30px;
 	height:95px;
 	margin-bottom:60px;
