--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,5 @@
 @charset "utf-8";
-html,body,div,spanm,h2,h3,h4,p,a,i,img,small,ol,ul,li,i,center,video{
-	padding:0;
-	margin:0;
-}
-
+*{margin: 0;padding: 0;border: 0;outline: 0;font:"微软雅黑";}
 html,body{
 	height:100%;
 	width:100%;
