--- a/css/style.css
+++ b/css/style.css
@@ -1285,5 +1285,35 @@ margin-bottom:50px;
 	height:40%;
 	overflow:hidden;
 	}
-
+@media screen and (max-width:680px){
+#wrapper,#top,#right,#left{width:auto !important;float:none}
+#x,#elevator{display:none}
+#top{height:auto;position:static;overflow:hidden;padding-bottom:5px}
+#top div.logo{float:none;margin:0px auto;height:30px}
+#top div.logo img{margin:0px}
+#top .ad{clear:both;float:none;height:auto;margin:0px auto;overflow:auto}
+#top .guider{float:none;margin:0px auto;width:390px;display:none;}
+#topulGuider li{margin:0px;width:65px}
+#autocomplete{margin-top:10px}
+#autocomplete .w7{width:40%}
+#dvBlogDetail img{width:100% !important;height:auto !important;}
+#dvREF li{width:auto}
+#right .dsitem .dsdetails{margin-left:40%}
+#right .dsitem .vpic{width:40%}
+#right .dsitem .vpic img{width:100%}
+#right .dsitem .dsdetails span.time{clear:both;display:block;float:none}
+#right div.attrib span.time{margin-left:0px}
+#right .item .codeattrib{float:none;width:auto;overflow:hidden;margin-bottom:10px}
+#right .item .codeattrib span{float:left;width:170px}
+#right .item .codeattrib span#spScore{float:right}
+#right .item .codeattrib span.time,#right .item .codeattrib span.dltag{padding-left:0px;background-image:none}
+div.ext u{display:block}
+div.postForm{overflow:auto}
+div.head,div.rmk,div.postForm div.postItem,div.postForm div.fr{float:none !important;width:auto !important}
+div.rmk{margin-left:85px}
+#mobile_nav{display:block}
+#top div.logo{width:auto;margin:0px;float:left}
+}
+@media screen and (max-width:400px){#autocomplete .w7{width:30%}#right .blogcontent{margin-top:70px}
+#top .ad{display:none}#top .guider{width:auto;clear:both}}
 
