--- a/css/style.css
+++ b/css/style.css
@@ -885,7 +885,7 @@ section{
 }
 .section_right.col-md-5 .poster-main a,.poster-main img{
 	text-align:center;
-	padding-left:100px;
+	padding-left:150px;
 	padding-top:20px;
 	display:inline-block;
 }
@@ -902,9 +902,12 @@ section{
 
 .section_right.col-md-5 .poster-main a,.poster-main img{
 	text-align:center;
-	padding-left:-10px;
+	margin-left:-30px;
 	padding-top:20px;
 	display:inline-block;
+}
+.section_right.col-md-5 .poster-main a,.poster-main span{
+	margin-left:-30px;
 }
 .section_right.col-md-5 .poster-main .poster-next{
 	display:none;
