--- a/css/style.css
+++ b/css/style.css
@@ -927,14 +927,15 @@ section{
 	background:#1a1b1f;
 }
 .item .row{
-	margin-left:14px;
+	margin-left:10px;
 	margin-top:30px;
 	margin-bottom:40px;
 }
 .item .col-sm-5{
 	z-index:2;
-	width:47%;
+	width:46%;
 	margin-bottom:10px;	
+	margin-left:15px;
 }
 .item .col-sm-5>a>img{
 	border:1px solid #000;
@@ -954,7 +955,7 @@ section{
 	background-color:#15161a;
 }
 #page-slide .carousel-control{
-	top:157px;
+	top:170px;
 	height:60px;
 	width:25px;
 	cursor:pointer;
@@ -977,10 +978,9 @@ section{
 	height:210px;
 	text-align:center;
 }
-.section_right.col-md-5 .d_content .poster-main{
-	position:relative;
-	width:100%;
-	height:100%;
+.d_content .poster-item{
+
+	margin:20px;
 	
 }
 #Promotion .section_right.col-md-5 .d_content.d_poster{
@@ -989,7 +989,7 @@ section{
 .poster-main a,.poster-main img{
 	text-align:center;
 	padding: 0 5px;
-	padding-top:20px;
+	padding-top:10px;
 	display:inline-block;
 }
 .poster-item>a>span{
@@ -1030,7 +1030,7 @@ section{
 	background-position:-377px -870px;
 }
 .poster-main .poster-next{
-	right:0;
+	right:-60px;
 	background-position:-292px -870px;
 }
 
@@ -1042,14 +1042,17 @@ section{
 	width:100%;
 }
 /*旋转木马*/
-.section_right.col-md-5 .row .d-list .col-sm-6>a>img{
+.section_right.col-md-5 .row .d-list .col-sm-5>a>img{
 	width:100%;
 	height:100%;
 	float:left;
 	margin-right:20px;
+	
 }
-.row .d-list .col-sm-6>a>span{
+
+.row .d-list .col-sm-5>a>span{
 	width:100%;
+	margin:
 }
 .section_right.col-md-5 .row .d-list .col-sm-6>a:hover img{
 	border:1px solid #00c0ff;
@@ -1057,19 +1060,13 @@ section{
 .d_title.map{
 	padding-top:10px;
 }
-@media (max-width: 768px){
-.row .d-list .col-sm-6>a>span{
-	width:200px;
+.row .d-list .poster-item{
+	margin-top:15px;
+	margin-right:10px;
+	margin-left:20px;
 }
 
-}
 
-@media (max-width: 768px){
-.row .d-list .col-sm-6>a>img,.row .d-list .col-sm-6>a>span{
-	width:100%;
-	height:100%;
-}
- }
 
   /*vedio*/
 #vedio{
