--- a/css/style.css
+++ b/css/style.css
@@ -391,16 +391,20 @@ section{
 	font-size:7px;
 	padding:11px 0;
 }
-
 .section_left .d_list{
-	vertical-align:baseline;
+	display:block;
+	height:45px;
+	line-height:45px;
+	padding:0 20px 0 10px;
+}
+.section_left .d_list p{
+	position:relative;
 	display:inline;
 	margin-left:-5px;
-	font-size:1px;
-	max-width:100%;
+	font-size:14px;
+	max-width:100px;
 	overflow:hidden;
 	white-space:nowrap;
-	text-overflow:ellipsis;
 	color:#ccc;
 }
 
@@ -1125,6 +1129,7 @@ section{
 	background:none;
 	background-color:#1a1b1f;
 	padding:11px 0;
+	color:#fff;
 }
 .nav-tabs li.active a:hover{
 	border:0 none;
