--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,14 @@ body,ul,li,ol,div{
 html,body {
   width: 100%;
   height: 100%;
-  background:url(../images/bg3.png);
-  background-size:100% 100%;
-  background-repeat:no-repeat;
+  background:url(../images/bg3.png) no-repeat left top;
   overflow-x:hidden;
-  background-position:center center;
+  background-size:100% 100%;
+  background-position:center;
   font-family: "Helvetica",Arial;
   color: white;
   background-color:gray;
+  z-index:1;
 }
 
 a,a:hover,a:focus{
@@ -27,74 +27,73 @@ p{
 	font-size:18px;
 	line-height:1.5;
 }
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   p {
-    margin: 0 0 35px;
-    font-size: 20px;
+    margin: 0 0 30px;
+    font-size: 19px;
     line-height: 1.6;
   }
 }
 /*nav*/
-.navbar-custom{
-	margin-bottom:0;
-	border:none;
-	text-transform:uppercase;
-	font-family:"Montserrat",Arial;
-	height:50px;
-	
-}
+
 .dropdown-menu{
 	background-color:rgba(255,255,255,0.3);
 	border-radius:9px;
 	box-shadow:5px 5px 6px #000;
 	width:40px;
-	
 }
-.navbar-custom .navbar-toggle{
-	color:width;
-	background-color:rgba(255,255,255,0.2);
-	font-size:12px;
-	
+.navbar-custom {
+  margin-bottom: 0;
+  text-transform: uppercase;
+  font-family: "Montserrat",Arial;
+  height:45px;
 }
-.navbar-custom .navbar-toggle:focus,
-.navbar-custom .navbar-toggle:active{
-	outline:none;
-}
-.navbar-custom a{
-	color:white;
+.navbar-custom .navbar-toggle {
+  color: white;
+  background-color: rgba(255, 255, 255, 0.2);
+  font-size: 12px;
 }
 .navbar-custom .navbar-toggle:hover{
-	background-color:#000;
+	background-color:rgba(255,255,255,0.5)
 }
-.navbar-custom .nav li a{
-	-webkit-transition:background 0.3s ease-in-out;
-	-moz-transition:background 0.3s ease-in-out;
-	transition:background 0.3 ease-in-out;
+.navbar-custom .navbar-toggle:focus,
+.navbar-custom .navbar-toggle:active {
+  outline: none;
 }
-.navbar-custom .nav li a:hover{
-	color:rgba(255,255,255,0.6);
-	outline:none;
-	background-color:transparent;
+.navbar-custom .navbar-brand {
+  font-weight: 700;
+}
+.navbar-custom .navbar-brand:focus {
+  outline: none;
+}
+.navbar-custom a {
+  color: white;
+}
+.navbar-custom .nav li a {
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background 0.3s ease-in-out;
+}
+.navbar-custom .nav li a:hover {
+  color: rgba(255, 255, 255, 0.8);
+  outline: none;
+  background-color: transparent;
 }
 .navbar-custom .nav li a:focus,
-.navbar-custom .nav li a:active{
-	outline:none;
-	background-color:transparent;
+.navbar-custom .nav li a:active {
+  outline: none;
+  background-color: transparent;
 }
-.navbar-custom .nav li .active{
-	outline:none;
+.navbar-custom .nav li.active {
+  outline: none;
 }
-.navbar-custom li .active a{
-	background-color:rgba(255,255,255,0.3);
+.navbar-custom .nav li.active a {
+  background-color: rgba(255, 255, 255, 0.3);
 }
-.navbar-custom li .active a:hover{
-	color:white;
+.navbar-custom .nav li.active a:hover {
+  color: white;
 }
-@media (max-width: 768px){
-	.navbar-custom{
-		
-	}
-}
+
 /*Intro*/
 #intro {
 	display:table;
@@ -288,7 +287,7 @@ margin-top: 30px;
 }
 #Resume .carousel-inner h2{
 	color: #000;
-	font-size: 2em;
+	font-size:2em;
 }
 #Resume .carousel-inner p{
 	color: #000;
@@ -302,7 +301,23 @@ margin-top: 30px;
 	top: 5%;
 	padding-top: 0;
 }
-
+@media (max-width: 768px){
+	#Resume .carousel-inner h2{
+	color: #000;
+	font-size: 19px;
+	}
+	#Resume .carousel-inner p{
+	color: #000;
+	font-size:1em;
+	}
+	#Resume .carousel-inner ul{
+		margin-top:-20px;
+	} 
+	#Resume .carousel-inner ul li{
+	color: #000;
+	font-size: 0.8me;
+}
+}
 #Demo .panel.panel-gray{
 	background-color:#ccc;;
 }
