--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ p{
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
+  font-size:16px;
 }
 .navbar-custom .nav li a:hover {
   color: rgba(255, 255, 255, 0.8);
